Fix #75 - footer alignment

--- a/app/javascript/scss/layout.scss
+++ b/app/javascript/scss/layout.scss
@@ -29,8 +29,10 @@ main {
     }
   }
 }
-.navbar-menu:first-child .navbar-item:first-child {
-  margin-left: -0.75rem;
+@media (min-width: $navbar-breakpoint) {
+  .navbar-menu:first-child .navbar-item:first-child {
+    margin-left: -0.75rem;
+  }
 }
 .navbar-item > span.icon:first-child {
   width: 1.25rem;
